# Calculator

./: .gitignore  README.md  engine.py  gui.py  main.py  pyproject.toml
screenshots/: calculatorGUI
src/: __main__.py
src/calculator/: __init__.py  __main__.py  logic.py  ui.py
tests/: test_logic.py  test_ui.py
