[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator"
version = "0.1.0"
description = "Scientific calculator in tkinter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Radosław Damps", email = "kedardamps@gmail.com"}]

[project.scripts]
calculator = "__main__:main"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.5",
    "mypy",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    --strict-markers
    --cov=src
    --cov-report=term-missing
    --cov-report=html
"""
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"